Added webmaster-bangalore email and fixed the post filename.

--- a/_posts/2013-03-24-poll.md
+++ b/_posts/2013-03-24-poll.md
@@ -11,5 +11,4 @@ Please cast the vote in the following polls.
 http://www.meetup.com/BangPypers/polls/780402/
 http://www.meetup.com/BangPypers/polls/780712/
  
-
-In case you have any other suggestions please write back to me `kracethekingmaker@gmail.com`. 
+In case you have any other suggestions please write back to me `webmaster-bangalore@python.org.in`.
