--- a/_posts/2016-05-21-talks.md
+++ b/_posts/2016-05-21-talks.md
@@ -16,6 +16,7 @@ Second talk was given by Ganesh. He explained about the hardware for Mesh networ
 
 Third talk was by Surya. He talked about P2P software applications. He explained why we need a p2p approach. Later he explained about several interesting projects Zeronet, ZeroConf, Avahi, Serval Mesh, Rumble, Murmur, opentracker, etc. Some of them are built with Python.
 
+Slides about talks are available [here](https://github.com/suriyadeepan/meshnet-guide-slides/files/275878/MeshGuide_BangPypers.pdf) and [here](https://github.com/lrmodesgh/Presentation/blob/master/0%20Main%20Subjects/9%20Radio%20Mesh%20Networking%20%26%20Distributed%20Systems/Radio%20Mesh%20Networking%20and%20Distributed%20Systems.pdf).
 At the end, there was a flash talk by Saurabh about defaultdict(collections). He explained how to implement a recursive defaultdict(a tree) and use cases of it.
 
 ![talk4]()
