Fix typo & add slides

--- a/_posts/2016-05-21-talks.md
+++ b/_posts/2016-05-21-talks.md
@@ -6,7 +6,7 @@ tags: [meetup, talks]
 
 [May meetup](http://www.meetup.com/BangPypers/events/197867222/) happened at the [Blue Jeans](https://bluejeans.com/) in Prestige tech park. 35 people attended the event. This time we had a series of talks about Mesh networks.
 
-Prasanna gave first talk. He explained about how internet works, what is a mesh network and why we need one. He also explained how mesh networks were used during chennai floods for communication when there was no other way to communicate. He also explained advantages of setting up a mesh network in rural areas and challenges in setting up them.
+Selva gave first talk. He explained about how internet works, what is a mesh network and why we need one. He also explained how mesh networks were used during chennai floods for communication when there was no other way to communicate. He also explained advantages of setting up a mesh network in rural areas and challenges in setting up them.
 
 ![talk1](http://photos4.meetupstatic.com/photos/event/4/f/0/9/highres_450260233.jpeg)
 
@@ -23,7 +23,8 @@ Third talk was by Surya. He talked about P2P software applications. He explained
 ![talk3](http://photos1.meetupstatic.com/photos/event/5/0/c/9/highres_450260681.jpeg)
 
 Slides about talks are available [here](https://github.com/suriyadeepan/meshnet-guide-slides/files/275878/MeshGuide_BangPypers.pdf) and [here](https://github.com/lrmodesgh/Presentation/blob/master/0%20Main%20Subjects/9%20Radio%20Mesh%20Networking%20%26%20Distributed%20Systems/Radio%20Mesh%20Networking%20and%20Distributed%20Systems.pdf).
-At the end, there was a flash talk by Saurabh about defaultdict(collections). He explained how to implement a recursive defaultdict(a tree) and use cases of it.
+
+At the end, there was a flash talk by Saurabh about defaultdict(collections). He explained how to implement a recursive defaultdict(a tree) and use cases of it. You can find [the code here](https://github.com/saurabh-hirani/talks/tree/master/defaultdict).
 
 ![talk4](http://photos4.meetupstatic.com/photos/event/5/6/9/4/600_450262164.jpeg)
 
