--- a/_posts/2017-01-21-jan-talks.md
+++ b/_posts/2017-01-21-jan-talks.md
@@ -14,7 +14,7 @@ The first talk was by Ram about setting up Jenkins Pipeline. Trust me Jenkins is
 
 The second talk was by Bibhas, quick introduction to AWS Lambda using Python. AWS Lambda is one of the leading providers of serverless architecture. I feel the name is a misnomer! [Here is the link to the presentation](https://docs.google.com/presentation/d/12fI_iKINBgRYw3kbDp2SiUmwd94oD-uZTBeeU6rfHZk/edit?usp=sharing).
 
-<img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/e/2/6/highres_457784582.jpeg" alt="Concurrency in Python 3.0" height="500" width="500">
+<img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/e/2/6/highres_457784582.jpeg" alt="Concurrency in Python 3.0">
 
 Anand B gave climax talk of the meetup. He spoke about Concurrency in Python 3.0. If you have spent a little bit time in Python, you must have heard about infamous GIL! He talked about multi-threading, multi-processing, asyncio and when to use each one of them. The content is private, and you can leave a comment in the meetup against Anand's comment to receive the snippets in your inbox.
 
