--- a/_posts/2017-01-21-jan-talks.md
+++ b/_posts/2017-01-21-jan-talks.md
@@ -6,11 +6,11 @@ tags: [meetup, talks]
 
 [Thought Factory in Diamond District](https://www.axisbank.com/thoughtfactory/index.html) hosted [first meetup](https://www.meetup.com/BangPypers/events/236371561/) of the year. The meetup started in the morning at 10:30 AM and went on till 1:00 PM. Close to 40 folks walked in. There were three talks. Two full-length talks, 30+ minutes and one 15 minutes talk.
 
-<img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/d/e/b/highres_457784523.jpeg" height="500" width="500">
+<img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/d/e/b/highres_457784523.jpeg">
 
 The first talk was by Ram about setting up Jenkins Pipeline. Trust me Jenkins is a beast Open Source CI/CD/More software. Here is the link to the talk [demo](https://github.com/mramanathan/jenkins_pipeline_demo).
 
-<img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/e/0/a/highres_457784554.jpeg" alt="AWS lambda using Python" height="500" width="500">
+<img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/a/e/0/a/highres_457784554.jpeg" alt="AWS lambda using Python">
 
 The second talk was by Bibhas, quick introduction to AWS Lambda using Python. AWS Lambda is one of the leading providers of serverless architecture. I feel the name is a misnomer! [Here is the link to the presentation](https://docs.google.com/presentation/d/12fI_iKINBgRYw3kbDp2SiUmwd94oD-uZTBeeU6rfHZk/edit?usp=sharing).
 
