--- a/_posts/2017-04-15-apr-talks.md
+++ b/_posts/2017-04-15-apr-talks.md
@@ -22,4 +22,6 @@ The session was concluded with CoWrks mentioning briefly about themselves.
 
 Hope you enjoyed the talks! See you again next time! 
 
-The Youtube Playlist for the above mentioned talks are available [here](https://www.youtube.com/playlist?list=PLsCs1Q6ZL-GcX0mH5p8CccWdIMrnT6Xaq).
+The Youtube Playlist for the above mentioned talks are available here -
+
+[![FuncProgramming](http://img.youtube.com/vi/uf_p946yMzk/1.jpg)](https://www.youtube.com/playlist?list=PLsCs1Q6ZL-GcX0mH5p8CccWdIMrnT6Xaq)
