Added Rivas Hameed's post link to May Meetup post.

--- a/_posts/2017-05-20-may-talks.md
+++ b/_posts/2017-05-20-may-talks.md
@@ -28,7 +28,7 @@ The *third* talk was presented by Sasidhar and he spoke about **How Import Works
 
 [![HowImportWorks](http://img.youtube.com/vi/kx_dcWIkewo/2.jpg)](https://www.youtube.com/watch?v=kx_dcWIkewo)
 
-The *fourth* talk was by Rivas Hameed and he spoke about the **Garbage Collector in Python** - about basic memory allocation , garbage collection by ref counts and by tracing, along with some live examples.  
+The *fourth* talk was by Rivas Hameed and he spoke about the **Garbage Collector in Python** - about basic memory allocation , garbage collection by ref counts and by tracing, along with some live examples. His thoughts on the subject can be found on his blog [here](https://rocketsandmore.wordpress.com/2017/05/27/clarifications-to-the-object-references-in-python/).  
 
 **YouTube video for the talk -** 
 
