--- a/_posts/2017-05-20-may-talks.md
+++ b/_posts/2017-05-20-may-talks.md
@@ -6,7 +6,7 @@ tags: [meetup, talks, workshop]
 
 For May's session, we continued with the "Talks" pattern, but we had a unique theme by name - ["Journey to the Kernel"](https://www.meetup.com/BangPypers/events/238929256/). The venue was VM Ware, and this time we had 5 speakers , all of them focusing in some way, on the internals of Python. The talks were each of 40-minutes. 
 
-The *first* talk was by Naveen Sivanandam Python of VM Ware on Containers - Deploying Web Services on Kubernetes. He spoke briefly about kubernetes and the typical infrastructure using a master,nodes, pods and services. He also demo-ed how to deploy 3 pods and run a flask app on them. The code for his talk along with the presentation can be found [here](https://github.com/naveens/simple-flask-app).
+The *first* talk was by Naveen Sivanandam Python of VM Ware on **Containers - Deploying Web Services on Kubernetes**. He spoke briefly about kubernetes and the typical infrastructure using a master,nodes, pods and services. He also demo-ed how to deploy 3 pods and run a flask app on them. The code for his talk along with the presentation can be found [here](https://github.com/naveens/simple-flask-app).
 
 **YouTube video for the talk -** 
 
