Move legacy poets to new format
Moved all the past posts to new format

updated footer

--- a/_posts/2014-12-31-thank-you-2014.md
+++ b/_posts/2014-12-31-thank-you-2014.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Thank you 2014
-tags: [meetup]
+layout: post
+title:  "Thank you 2014"
+author: bangpypers
+tags: [bangpypers]
+description: "Thank you 2014"
+categories: [ meetup ]
+image:
+featured: false
+hidden: false
 ---
 2014 was great year for BangPypers. We had workshops, talks and dev sprints.
 Thanks for all our sponsors.
