--- a/_posts/2016-05-21-talks.md
+++ b/_posts/2016-05-21-talks.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks About Mesh Networks - 2016 May Meetup
-tags: [meetup, talks]
+layout: post
+title:  "Talks About Mesh Networks – 2016 May Meetup"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks About Mesh Networks – 2016 May Meetup"
+categories: [ meetup, talks ]
+image:
+featured: false
+hidden: false
 ---
 
 [May meetup](http://www.meetup.com/BangPypers/events/197867222/) happened at the [Blue Jeans](https://bluejeans.com/) in Prestige tech park. 35 people attended the event. This time we had a series of talks about Mesh networks.
