--- a/_posts/2017-01-21-jan-talks.md
+++ b/_posts/2017-01-21-jan-talks.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks - Jan, 2017
-tags: [meetup, talks]
+layout: post
+title:  "Talks – Jan, 2017"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks – Jan, 2017"
+categories: [ meetup, talks ]
+image:
+featured: false
+hidden: false
 ---
 
 [Thought Factory in Diamond District](https://www.axisbank.com/thoughtfactory/index.html) hosted [first meetup](https://www.meetup.com/BangPypers/events/236371561/) of the year. The meetup started in the morning at 10:30 AM and went on till 1:00 PM. Close to 40 folks walked in. There were three talks. Two full-length talks, 30+ minutes and one 15 minutes talk.
