--- a/_posts/2017-04-15-apr-talks.md
+++ b/_posts/2017-04-15-apr-talks.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks - Apr, 2017
-tags: [meetup, talks, workshop]
+layout: post
+title:  "Talks – Apr, 2017"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks – Apr, 2017"
+categories: [ meetup, talks, workshop ]
+image:
+featured: false
+hidden: false
 ---
 
 For April's session, we went with the "Talks" theme again and this was hosted by Saloni of [Byte Academy](http://byteacademy.co/) at [CoWrks Infinity](https://www.cowrks.com/infinity-bangalore) and we had 4 speakers with diverse topics for talks, each with a 15 minute duration. 
