--- a/_posts/2017-05-20-may-talks.md
+++ b/_posts/2017-05-20-may-talks.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks - May, 2017
-tags: [meetup, talks, workshop]
+layout: post
+title:  "Talks – May, 2017"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks – May, 2017"
+categories: [ meetup, talks, workshop ]
+image:
+featured: false
+hidden: false
 ---
 
 For May's session, we continued with the "Talks" pattern, but we had a unique theme by name - ["Journey to the Kernel"](https://www.meetup.com/BangPypers/events/238929256/). The venue was VM Ware, and this time we had 5 speakers , all of them focusing in some way, on the internals of Python. The talks were each of 40-minutes. 
