--- a/_posts/2017-06-17-jun-talks.md
+++ b/_posts/2017-06-17-jun-talks.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks - June, 2017
-tags: [meetup, talks, workshop]
+layout: post
+title:  "Talks – June, 2017"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks – June, 2017"
+categories: [ meetup, talks, workshop ]
+image:
+featured: false
+hidden: false
 ---
 
 For June's session, we continued the ["Journey to the Kernel"](https://www.meetup.com/BangPypers/events/239426318/) theme. The venue was Nutanix, and the 3 speakers, this time spoke again on topics related to the internals of Python. The talks were each of 40-minutes. 
