--- a/_posts/2017-09-16-sep-talk.md
+++ b/_posts/2017-09-16-sep-talk.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks - Sep, 2017
-tags: [meetup, talks, workshop]
+layout: post
+title:  "Talks – Sep, 2017"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks – Sep, 2017"
+categories: [ meetup, talks, workshop ]
+image:
+featured: false
+hidden: false
 ---
 
 For September's session, we continued the ["Machine Learning/ Deep Learning "](https://www.meetup.com/BangPypers/events/242065713/) theme. The venue was Synup in Koramangala, and we had 3 speakers. The first two talks were of 40-60 minutes and the last one was around 20 minutes. 
