--- a/_posts/2018-10-27-oct-talk.md
+++ b/_posts/2018-10-27-oct-talk.md
@@ -1,7 +1,13 @@
 ---
-layout: post.html
-title: Talks - October, 2018
-tags: [meetup, talks, workshop]
+layout: post
+title:  "Talks – October, 2018"
+author: bangpypers
+tags: [bangpypers]
+description: "Talks – October, 2018"
+categories: [ meetup, talks, workshop ]
+image:
+featured: false
+hidden: false
 ---
 
 For October 2018's session, we had a session on ["Data Science"](https://www.meetup.com/BangPypers/events/flmkdqyxnbbc/) . The venue was G0-JEK, Domlur and we had 3 speakers. All the sessions ran for around 40 minutes.
