--- a/_posts/2017-09-16-sep-talk.md
+++ b/_posts/2017-09-16-sep-talk.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Talks – Sep, 2017"
-author: bangpypers
+author: abhiram
 tags: [bangpypers]
 description: "Talks – Sep, 2017"
 categories: [ meetup, talks, workshop ]
