--- a/_posts/2017-05-20-may-talks.md
+++ b/_posts/2017-05-20-may-talks.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Talks – May, 2017"
-author: bangpypers
+author: abhiram
 tags: [bangpypers]
 description: "Talks – May, 2017"
 categories: [ meetup, talks, workshop ]
