--- a/_posts/2017-04-15-apr-talks.md
+++ b/_posts/2017-04-15-apr-talks.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Talks – Apr, 2017"
 author: abhiram
-tags: [bangpypers]
+tags: [abhiram]
 description: "Talks – Apr, 2017"
 categories: [ meetup, talks, workshop ]
 image:
