--- a/_posts/2017-09-16-sep-talk.md
+++ b/_posts/2017-09-16-sep-talk.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Talks – Sep, 2017"
 author: abhiram
-tags: [bangpypers]
+tags: [abhiram]
 description: "Talks – Sep, 2017"
 categories: [ meetup, talks, workshop ]
 image:
